Package_Tools/include-C/gnutls/inarbeit/fertig/gnutls.pp


function gnutls_heartbeat_allowed(session:Tgnutls_session_t; _type:dword):dword;cdecl;external;
{ Safe renegotiation  }
function gnutls_safe_renegotiation_status(session:Tgnutls_session_t):dword;cdecl;external;
function gnutls_session_ext_master_secret_status(session:Tgnutls_session_t):dword;cdecl;external;
function gnutls_session_etm_status(session:Tgnutls_session_t):dword;cdecl;external;
{*
 * gnutls_session_flags_t:
 * @GNUTLS_SFLAGS_SAFE_RENEGOTIATION: Safe renegotiation (RFC5746) was used
 * @GNUTLS_SFLAGS_EXT_MASTER_SECRET: The extended master secret (RFC7627) extension was used
 * @GNUTLS_SFLAGS_ETM: The encrypt then MAC (RFC7366) extension was used
 * @GNUTLS_SFLAGS_RFC7919: The RFC7919 Diffie-Hellman parameters were negotiated
 * @GNUTLS_SFLAGS_HB_LOCAL_SEND: The heartbeat negotiation allows the local side to send heartbeat messages
 * @GNUTLS_SFLAGS_HB_PEER_SEND: The heartbeat negotiation allows the peer to send heartbeat messages
 * @GNUTLS_SFLAGS_FALSE_START: False start was used in this client session.
 * @GNUTLS_SFLAGS_SESSION_TICKET: A session ticket has been received by the server.
 * @GNUTLS_SFLAGS_POST_HANDSHAKE_AUTH: Indicates client capability for post-handshake auth; set only on server side.
 * @GNUTLS_SFLAGS_EARLY_START: The TLS1.3 server session returned early.
 * @GNUTLS_SFLAGS_EARLY_DATA: The TLS1.3 early data has been received by the server.
 * @GNUTLS_SFLAGS_CLI_REQUESTED_OCSP: Set when the client has requested OCSP staple during handshake.
 * @GNUTLS_SFLAGS_SERV_REQUESTED_OCSP: Set when the server has requested OCSP staple during handshake.
 *
 * Enumeration of different session parameters.
  }
type
  Pgnutls_session_flags_t = ^Tgnutls_session_flags_t;
  Tgnutls_session_flags_t =  Longint;
  Const
    GNUTLS_SFLAGS_SAFE_RENEGOTIATION = 1;
    GNUTLS_SFLAGS_EXT_MASTER_SECRET = 1 shl 1;
    GNUTLS_SFLAGS_ETM = 1 shl 2;
    GNUTLS_SFLAGS_HB_LOCAL_SEND = 1 shl 3;
    GNUTLS_SFLAGS_HB_PEER_SEND = 1 shl 4;
    GNUTLS_SFLAGS_FALSE_START = 1 shl 5;
    GNUTLS_SFLAGS_RFC7919 = 1 shl 6;
    GNUTLS_SFLAGS_SESSION_TICKET = 1 shl 7;
    GNUTLS_SFLAGS_POST_HANDSHAKE_AUTH = 1 shl 8;
    GNUTLS_SFLAGS_EARLY_START = 1 shl 9;
    GNUTLS_SFLAGS_EARLY_DATA = 1 shl 10;
    GNUTLS_SFLAGS_CLI_REQUESTED_OCSP = 1 shl 11;
    GNUTLS_SFLAGS_SERV_REQUESTED_OCSP = 1 shl 12;
;

function gnutls_session_get_flags(session:Tgnutls_session_t):dword;cdecl;external;
{*
 * gnutls_supplemental_data_format_type_t:
 * @GNUTLS_SUPPLEMENTAL_UNKNOWN: Unknown data format
 *
 * Enumeration of different supplemental data types (RFC 4680).
  }
type
  Pgnutls_supplemental_data_format_type_t = ^Tgnutls_supplemental_data_format_type_t;
  Tgnutls_supplemental_data_format_type_t =  Longint;
  Const
    GNUTLS_SUPPLEMENTAL_UNKNOWN = 0;
;
(* Const before type ignored *)

function gnutls_supplemental_get_name(_type:Tgnutls_supplemental_data_format_type_t):Pchar;cdecl;external;
{ SessionTicket, RFC 5077.  }
function gnutls_session_ticket_key_generate(key:Pgnutls_datum_t):longint;cdecl;external;
function gnutls_session_ticket_enable_client(session:Tgnutls_session_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_session_ticket_enable_server(session:Tgnutls_session_t; key:Pgnutls_datum_t):longint;cdecl;external;
function gnutls_session_ticket_send(session:Tgnutls_session_t; nr:dword; flags:dword):longint;cdecl;external;
{ SRTP, RFC 5764  }
{*
 * gnutls_srtp_profile_t:
 * @GNUTLS_SRTP_AES128_CM_HMAC_SHA1_80: 128 bit AES with a 80 bit HMAC-SHA1
 * @GNUTLS_SRTP_AES128_CM_HMAC_SHA1_32: 128 bit AES with a 32 bit HMAC-SHA1
 * @GNUTLS_SRTP_NULL_HMAC_SHA1_80: NULL cipher with a 80 bit HMAC-SHA1
 * @GNUTLS_SRTP_NULL_HMAC_SHA1_32: NULL cipher with a 32 bit HMAC-SHA1
 * @GNUTLS_SRTP_AEAD_AES_128_GCM: 128 bit AES with GCM
 * @GNUTLS_SRTP_AEAD_AES_256_GCM: 256 bit AES with GCM
 *
 * Enumeration of different SRTP protection profiles.
  }
type
  Pgnutls_srtp_profile_t = ^Tgnutls_srtp_profile_t;
  Tgnutls_srtp_profile_t =  Longint;
  Const
    GNUTLS_SRTP_AES128_CM_HMAC_SHA1_80 = $0001;
    GNUTLS_SRTP_AES128_CM_HMAC_SHA1_32 = $0002;
    GNUTLS_SRTP_NULL_HMAC_SHA1_80 = $0005;
    GNUTLS_SRTP_NULL_HMAC_SHA1_32 = $0006;
    GNUTLS_SRTP_AEAD_AES_128_GCM = $0007;
    GNUTLS_SRTP_AEAD_AES_256_GCM = $0008;
;

function gnutls_srtp_set_profile(session:Tgnutls_session_t; profile:Tgnutls_srtp_profile_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_srtp_set_profile_direct(session:Tgnutls_session_t; profiles:Pchar; err_pos:PPchar):longint;cdecl;external;
function gnutls_srtp_get_selected_profile(session:Tgnutls_session_t; profile:Pgnutls_srtp_profile_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_srtp_get_profile_name(profile:Tgnutls_srtp_profile_t):Pchar;cdecl;external;
(* Const before type ignored *)
function gnutls_srtp_get_profile_id(name:Pchar; profile:Pgnutls_srtp_profile_t):longint;cdecl;external;
function gnutls_srtp_get_keys(session:Tgnutls_session_t; key_material:pointer; key_material_size:dword; client_key:Pgnutls_datum_t; client_salt:Pgnutls_datum_t; 
           server_key:Pgnutls_datum_t; server_salt:Pgnutls_datum_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_srtp_set_mki(session:Tgnutls_session_t; mki:Pgnutls_datum_t):longint;cdecl;external;
function gnutls_srtp_get_mki(session:Tgnutls_session_t; mki:Pgnutls_datum_t):longint;cdecl;external;
{ COMPRESS_CERTIFICATE extension, RFC8879  }
function gnutls_compress_certificate_get_selected_method(session:Tgnutls_session_t):Tgnutls_compression_method_t;cdecl;external;
(* Const before type ignored *)
function gnutls_compress_certificate_set_methods(session:Tgnutls_session_t; methods:Pgnutls_compression_method_t; methods_len:Tsize_t):longint;cdecl;external;
{ ALPN TLS extension  }
{*
 * gnutls_alpn_flags_t:
 * @GNUTLS_ALPN_MANDATORY: Require ALPN negotiation. The connection will be
 *   aborted if no matching ALPN protocol is found.
 * @GNUTLS_ALPN_SERVER_PRECEDENCE: The choices set by the server
 *   will take precedence over the client's.
 *
 * Enumeration of different ALPN flags. These are used by gnutls_alpn_set_protocols().
  }
type
  Pgnutls_alpn_flags_t = ^Tgnutls_alpn_flags_t;
  Tgnutls_alpn_flags_t =  Longint;
  Const
    GNUTLS_ALPN_MANDATORY = 1;
    GNUTLS_ALPN_SERVER_PRECEDENCE = 1 shl 1;
;
  GNUTLS_ALPN_MAND = GNUTLS_ALPN_MANDATORY;  

function gnutls_alpn_get_selected_protocol(session:Tgnutls_session_t; protocol:Pgnutls_datum_t):longint;cdecl;external;
(* Const before type ignored *)
function gnutls_alpn_set_protocols(session:Tgnutls_session_t; protocols:Pgnutls_datum_t; protocols_size:dword; flags:dword):longint;cdecl;external;
function gnutls_key_generate(key:Pgnutls_datum_t; key_size:dword):longint;cdecl;external;
const
  GNUTLS_PRIORITY_INIT_DEF_APPEND = 1;  
(* Const before type ignored *)
(* Const before type ignored *)

function gnutls_priority_init(priority_cache:Pgnutls_priority_t; priorities:Pchar; err_pos:PPchar):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gnutls_priority_init2(priority_cache:Pgnutls_priority_t; priorities:Pchar; err_pos:PPchar; flags:dword):longint;cdecl;external;
procedure gnutls_priority_deinit(priority_cache:Tgnutls_priority_t);cdecl;external;
function gnutls_priority_get_cipher_suite_index(pcache:Tgnutls_priority_t; idx:dword; sidx:Pdword):longint;cdecl;external;
const
  GNUTLS_PRIORITY_LIST_INIT_KEYWORDS = 1;  
  GNUTLS_PRIORITY_LIST_SPECIAL = 2;  
(* Const before type ignored *)
